# WheelLoader

./: .gitignore  CMakeLists.txt  README.md  readme2.txt
data/vehicle/dwl2015/frontendloader/valveinput/: sample_valve_input.txt
demo_DWL2015/: CMakeLists.txt
dwl2015/: DWL2015_ANCFTire.cpp  DWL2015_ANCFTire.h  DWL2015_Chassis.cpp  DWL2015_DoubleWishbone.cpp  DWL2015_DoubleWishbone.h  DWL2015_Driveline2WD.cpp  DWL2015_Driveline2WD.h  DWL2015_Driveline4WD.cpp  DWL2015_Driveline4WD.h  DWL2015_FialaTire.cpp  DWL2015_FialaTire.h  DWL2015_FrontEndLoader.cpp  DWL2015_LugreTire.cpp  DWL2015_PitmanArm.cpp  DWL2015_PitmanArm.h  DWL2015_RackPinion.cpp  DWL2015_ReissnerTire.h  DWL2015_RigidTire.h  DWL2015_SimpleDriveline.cpp  DWL2015_Vehicle.cpp  DWL2015_VehicleFull.cpp  DWL2015_VehicleFull.h  README.md  hmmwv_chassis.mtl  left_hub.mtl  left_tire.mtl  pactest.tir  right_hub.mtl  right_tire.mtl
dwl2015/POV-Ray/: hmmwv_chassis_POV_mat.inc  hmmwv_chassis_flatbed_POV_geom.inc  hmmwv_chassis_flatbed_POV_mat.inc  lugged_wheel_POV_geom.inc  lugged_wheel_POV_mat.inc  wheel_L_POV_mat.inc  wheel_R_POV_geom.inc  wheel_R_POV_mat.inc
dwl2015/brake/: HMMWV_BrakeSimple_Front.json  HMMWV_BrakeSimple_Rear.json
dwl2015/chassis/: HMMWV_Chassis.json
dwl2015/driveline/: HMMWV_Driveline2WD.json  HMMWV_Driveline4WD.json  HMMWV_DrivelineSimple.json
dwl2015/powertrain/: HMMWV_SimplePowertrain.json  engine.txt  tc.txt
dwl2015/steering/: HMMWV_PitmanArm.json  HMMWV_RackPinion.json
dwl2015/suspension/: HMMWV_DoubleWishboneFront.json  HMMWV_DoubleWishboneRear.json  HMMWV_DoubleWishboneReducedFront.json  HMMWV_DoubleWishboneReducedRear.json
dwl2015/suspensionTest/: HMMWV_ST_front.json  HMMWV_ST_rear.json
dwl2015/tire/: HMMWV_ANCFTire.json  HMMWV_FEATire.json  HMMWV_LugreTire.json  HMMWV_ReissnerTire.json  HMMWV_pacejka.tir
frontendloader/: ChFrontEndLoader.cpp
source/: CMakeLists.txt
source/data/vehicle/dwl2015/frontendloader/valveinput/: sample_valve_input.txt
source/src/: CMakeLists.txt  cascading_packing_condition.cpp  central_pivot_mech.cpp  demo_PAR_WheelLoader.cpp  demo_VEH_ArticulatedVehicle.cpp  demo_VEH_wheelloader.cpp  hydraulic_force.cpp  iArmlinkage.cpp  test_HYDR_actuator.cpp  test_PAR_rolling_friction.cpp  test_SEQ_rolling_friction.cpp  test_granular_PAR.cpp  test_granular_PAR_cyl.cpp  test_granular_PAR_funnel.cpp  test_granular_PAR_layer.cpp  test_mesh.cpp  test_normal.cpp  test_normal_PAR.cpp  test_rolling_friction.cpp  zBarSandpile.cpp  zBarlinkage.cpp  zBarlinkage_PAR.cpp
source/src/chrono_models/vehicle/: CMakeLists.txt
source/src/chrono_models/vehicle/dwl2015/: DWL2015.cpp  DWL2015.h  DWL2015_ANCFTire.cpp  DWL2015_ANCFTire.h  DWL2015_BrakeSimple.cpp  DWL2015_BrakeSimple.h  DWL2015_Chassis.cpp  DWL2015_Chassis.h  DWL2015_DoubleWishbone.cpp  DWL2015_DoubleWishbone.h  DWL2015_DoubleWishboneReduced.cpp  DWL2015_DoubleWishboneReduced.h  DWL2015_Driveline2WD.cpp  DWL2015_Driveline2WD.h  DWL2015_Driveline4WD.cpp  DWL2015_Driveline4WD.h  DWL2015_FialaTire.cpp  DWL2015_FialaTire.h  DWL2015_FrontEndLoader.cpp  DWL2015_FrontEndLoader.h  DWL2015_LugreTire.cpp  DWL2015_LugreTire.h  DWL2015_PitmanArm.cpp  DWL2015_PitmanArm.h  DWL2015_Powertrain.cpp  DWL2015_Powertrain.h  DWL2015_RackPinion.cpp  DWL2015_RackPinion.h  DWL2015_ReissnerTire.cpp  DWL2015_ReissnerTire.h  DWL2015_RigidTire.cpp  DWL2015_RigidTire.h  DWL2015_SimpleDriveline.cpp  DWL2015_SimpleDriveline.h  DWL2015_SimplePowertrain.cpp  DWL2015_SimplePowertrain.h  DWL2015_Vehicle.cpp  DWL2015_Vehicle.h  DWL2015_VehicleFull.cpp  DWL2015_VehicleFull.h  (+4 more)
source/src/chrono_vehicle/: CMakeLists.txt
source/src/chrono_vehicle/wheeled_vehicle/frontendloader/: ChFrontEndLoader.cpp  ChFrontEndLoader.h
source/src/demos/: CMakeLists.txt
source/src/demos/irrlicht/: CMakeLists.txt  demo_IRR_fel.cpp  zBarlinkage.cpp
source/src/demos/vehicle/: CMakeLists.txt
source/src/demos/vehicle/demo_DWL2015/: CMakeLists.txt  demo_VEH_DWL2015.cpp
source/utilities/: WLzbar.mw
source/utilities/pile_tracking/: TrackGranule.m
src/: CMakeLists.txt
src/chrono_models/: CMakeLists.txt  ChApiModels.h
src/chrono_models/vehicle/: CMakeLists.txt
src/chrono_models/vehicle/dwl2015/: DWL2015.cpp  DWL2015.h  DWL2015_BrakeSimple.cpp  DWL2015_BrakeSimple.h  DWL2015_Chassis.h  DWL2015_DoubleWishboneReduced.cpp  DWL2015_DoubleWishboneReduced.h  DWL2015_FrontEndLoader.h  DWL2015_LugreTire.h  DWL2015_Powertrain.cpp  DWL2015_Powertrain.h  DWL2015_RackPinion.h  DWL2015_ReissnerTire.cpp  DWL2015_RigidTire.cpp  DWL2015_SimpleDriveline.h  DWL2015_SimplePowertrain.cpp  DWL2015_SimplePowertrain.h  DWL2015_Vehicle.h  DWL2015_VehicleReduced.cpp  DWL2015_VehicleReduced.h  DWL2015_Wheel.cpp  DWL2015_Wheel.h
src/chrono_vehicle/: CMakeLists.txt
src/chrono_vehicle/wheeled_vehicle/frontendloader/: ChFrontEndLoader.h
src/demos/: CMakeLists.txt
src/demos/irrlicht/: CMakeLists.txt  demo_IRR_fel.cpp  demo_fel.cpp
src/demos/vehicle/: CMakeLists.txt
src/demos/vehicle/demo_DWL2015/: demo_VEH_DWL2015.cpp
